Added quiz page and sound for shuffling. Can't have duplicates for questions and categories

--- a/app/src/main/res/layout/activity_cards_for_given_topic.xml
+++ b/app/src/main/res/layout/activity_cards_for_given_topic.xml
@@ -21,11 +21,32 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="320dp"
-        android:layout_marginTop="16dp"
-        android:text="Add card"
+        android:layout_marginStart="564dp"
+        android:layout_marginTop="32dp"
         android:onClick="createFrontAndBackView"
+        android:text="Add card"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="32dp"
+        android:textStyle="bold"
+        android:text="Topic:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/topicName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="32dp"
+        android:text="TopicName"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
