--- a/app/src/main/res/layout/flash_back.xml
+++ b/app/src/main/res/layout/flash_back.xml
@@ -18,12 +18,13 @@
         app:srcCompat="@drawable/flashcardblank" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/flashBackText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="244dp"
         android:layout_marginTop="92dp"
         android:ems="10"
+        android:hint="Answer goes here"
         android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
